tests/urmoac/errors/net_issues/duplicate_edge_id/errors.urmoac
Edge '10000' already exists.
